# CodingCompanion

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT.md  Procfile  README.md  deploy.sh  dev.py  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json  vercel.json
attached_assets/: Pasted-Probability-is-a-measure-of-the-likelihood-of-an-event-occurring-In-probability-theory-it-is-defin-1740441411361.txt
backend/: Procfile  __init__.py  app.py  config.py  database.py  document_processor.py  huggingface.py  main.py  models.py  requirements.txt  server.py
backend/middleware/: logging.py
client/: README.md  index.html  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: file-upload.tsx
client/src/components/chat/: code-block.tsx  input.tsx  message.tsx
client/src/components/ui/: textarea.tsx
client/src/lib/: openai.ts  queryClient.ts
client/src/pages/: chat.tsx
frontend/: next.config.js  tailwind.config.js  vercel.json
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
frontend/types/: index.ts
server/: routes.ts  storage.ts
server/lib/: codeExecutor.ts  huggingface.ts  openai.ts
shared/: schema.ts
