[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-json-logger>=3.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]
